--- a/MercadeoDroid/res/layout/segundacapa.xml
+++ b/MercadeoDroid/res/layout/segundacapa.xml
@@ -6,17 +6,10 @@
      android:orientation = "horizontal"
      android:gravity = "bottom"
      android:layout_gravity = "bottom">
-     <LinearLayout
-          xmlns:android = "http://schemas.android.com/apk/res/android"
-          android:layout_width = "fill_parent"
-          android:layout_height = "wrap_content"
-          android:orientation = "horizontal"
-          android:gravity = "center_horizontal">
-          <Button
+        <Button
                android:id="@+id/button"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
-               android:text = "Capturar">
+               android:text = "@string/text_boton">
           </Button>
-     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
